<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/iv_registerUserBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/teal_700"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_signUpFirstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/et_signUpLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/et_signUpEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/et_signUpPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/et_signUpAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/et_signUpPhoneNumber"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/black" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:background="@color/teal_200"
            android:onClick="signUpValidation"
            />

    </LinearLayout>

</ScrollView>