<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/teal_700"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_loginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_loginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="@color/teal_200"
        android:onClick="validation"
        tools:ignore="MissingClass" />
    <TextView
        android:id="@+id/tv_registerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register Here"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/teal_700"/>

</LinearLayout>